# room-cleanliness-classifier

./: README.md  pyproject.toml
app/: __init__.py  api.py  main.py  ui.py
app/core/: config.py
app/models/: __init__.py  contracts.py
app/services/: bedrock.py  classifier.py  factory.py  policy.py  rekognition.py  repository.py  reviews.py  storage.py
docs/: architecture-plan.md  aws-setup-checklist.md  implementation-learnings.md  implementation-roadmap.md  optimization-playbook.md  product-requirements.md  staging-live-testing-plan.md
scripts/: compare_cleanliness_options.py  create_dynamodb_table.py  create_s3_bucket.py  live_dynamodb_smoke_test.py  live_local_image_classify_test.py  live_local_image_s3_rekognition_test.py  live_review_reporting_smoke_test.py  live_s3_rekognition_smoke_test.py  run_named_test_batch.py
tests/: test_api.py  test_aws_adapters.py  test_classifier.py  test_config.py  test_policy.py  test_repository.py  test_reviews.py  test_scripts.py
